Autogenerated/Bindings/CppDynamic/lib3mf_types.hpp

typedef unsigned char Lib3MF_uint8;
typedef unsigned int Lib3MF_uint32;
typedef int Lib3MF_int32;
typedef uint8_t Lib3MF_uint8;
typedef uint32_t Lib3MF_uint32;
typedef int32_t Lib3MF_int32;
typedef float Lib3MF_single;
typedef double Lib3MF_double;
  enum class ePropertyType : Lib3MF_int32 {
    NoPropertyType = 0,
    BaseMaterial = 1,
    TexCoord = 2,
    Colors = 3,
    Composite = 4,
    Multi = 5
  };
  enum class eSlicesMeshResolution : Lib3MF_int32 {
    Fullres = 0,
    Lowres = 1
  };
  enum class ePersistentReaderSourceType : Lib3MF_int32 {
    Unknown = 0,
    FileOnDisk = 1,
    MemoryBuffer = 2,
    Callback = 3
  };
  enum class eModelUnit : Lib3MF_int32 {
    MicroMeter = 0,
    MilliMeter = 1,
    CentiMeter = 2,
    Inch = 3,
    Foot = 4,
    Meter = 5
  };
  enum class eObjectType : Lib3MF_int32 {
    Other = 0,
    Model = 1,
    Support = 2,
    SolidSupport = 3
  };
  enum class eTextureType : Lib3MF_int32 {
    Unknown = 0,
    PNG = 1,
    JPEG = 2
  };
  enum class eTextureTileStyle : Lib3MF_int32 {
    Wrap = 0,
    Mirror = 1,
    Clamp = 2,
    NoTileStyle = 3
  };
  enum class eTextureFilter : Lib3MF_int32 {
    Auto = 0,
    Linear = 1,
    Nearest = 2
  };
  enum class eBeamLatticeCapMode : Lib3MF_int32 {
    Sphere = 0,
    HemiSphere = 1,
    Butt = 2
  };
  enum class eBeamLatticeClipMode : Lib3MF_int32 {
    NoClipMode = 0,
    Inside = 1,
    Outside = 2
  };
  enum class eBeamLatticeBallMode : Lib3MF_int32 {
    BeamLatticeBallModeNone = 0,
    Mixed = 1,
    All = 2
  };
  enum class eProgressIdentifier : Lib3MF_int32 {
    QUERYCANCELED = 0,
    DONE = 1,
    CLEANUP = 2,
    READSTREAM = 3,
    EXTRACTOPCPACKAGE = 4,
    READNONROOTMODELS = 5,
    READROOTMODEL = 6,
    READRESOURCES = 7,
    READMESH = 8,
    READSLICES = 9,
    READBUILD = 10,
    READCUSTOMATTACHMENT = 11,
    READTEXTURETACHMENTS = 12,
    CREATEOPCPACKAGE = 13,
    WRITEMODELSTOSTREAM = 14,
    WRITEROOTMODEL = 15,
    WRITENONROOTMODELS = 16,
    WRITEATTACHMENTS = 17,
    WRITECONTENTTYPES = 18,
    WRITENOBJECTS = 19,
    WRITENODES = 20,
    WRITETRIANGLES = 21,
    WRITESLICES = 22,
    WRITEKEYSTORE = 23
  };
  enum class eBlendMethod : Lib3MF_int32 {
    NoBlendMethod = 0,
    Mix = 1,
    Multiply = 2
  };
  enum class eToolpathSegmentType : Lib3MF_int32 {
    Unknown = 0,
    Hatch = 1,
    Loop = 2,
    Polyline = 3,
    PointSequence = 4,
    Arc = 5,
    Delay = 6,
    Sync = 7
  };
  enum class eChannelName : Lib3MF_int32 {
    Red = 0,
    Green = 1,
    Blue = 2,
    Alpha = 3
  };
  enum class eToolpathAttributeType : Lib3MF_int32 {
    Unknown = 0,
    Integer = 1,
    Double = 2
  };
  enum class eToolpathProfileModificationFactor : Lib3MF_int32 {
    Unknown = 0,
    FactorF = 1,
    FactorG = 2,
    FactorH = 3
  };
  enum class eCompositionMethod : Lib3MF_int32 {
    WeightedSum = 0,
    Multiply = 1,
    Min = 2,
    Max = 3,
    Mask = 4
  };
  enum class eImplicitNodeType : Lib3MF_int32 {
    Addition = 0, 
    Subtraction = 1, 
    Multiplication = 2, 
    Division = 3, 
    Constant = 4, 
    ConstVec = 5, 
    ConstMat = 6, 
    ComposeVector = 7, 
    DecomposeVector = 8, 
    ComposeMatrix = 9, 
    MatrixFromColumns = 10, 
    MatrixFromRows = 11, 
    Dot = 12, 
    Cross = 13, 
    MatVecMultiplication = 14, 
    Transpose = 15, 
    Inverse = 16, 
    Sinus = 17, 
    Cosinus = 18, 
    Tan = 19, 
    ArcSin = 20, 
    ArcCos = 21, 
    ArcTan = 22, 
    ArcTan2 = 23, 
    Min = 24, 
    Max = 25, 
    Abs = 26, 
    Fmod = 27, 
    Pow = 28, 
    Sqrt = 29, 
    Exp = 30, 
    Log = 31, 
    Log2 = 32, 
    Log10 = 33, 
    Select = 34, 
    Clamp = 35, 
    Sinh = 36, 
    Cosh = 37, 
    Tanh = 38, 
    Round = 39, 
    Ceil = 40, 
    Floor = 41, 
    Sign = 42, 
    Fract = 43, 
    FunctionCall = 44, 
    Mesh = 45, 
    Length = 46, 
    ConstResourceID = 47, 
    VectorFromScalar = 48, 
    UnsignedMesh = 49, 
    Mod = 50 
  };
  enum class eImplicitPortType : Lib3MF_int32 {
    Scalar = 0, 
    Vector = 1, 
    Matrix = 2, 
    ResourceID = 3 
  };
  enum class eEncryptionAlgorithm : Lib3MF_int32 {
    AES256_GCM = 1 
  };
  enum class eWrappingAlgorithm : Lib3MF_int32 {
    RSA_OAEP = 0 
  };
  enum class eMgfAlgorithm : Lib3MF_int32 {
    MGF1_SHA1 = 160, 
    MGF1_SHA224 = 224, 
    MGF1_SHA256 = 256, 
    MGF1_SHA384 = 384, 
    MGF1_SHA512 = 512 
  };
  enum class eDigestMethod : Lib3MF_int32 {
    SHA1 = 160, 
    SHA256 = 256 
  };
  enum class eCompression : Lib3MF_int32 {
    NoCompression = 0, 
    Deflate = 1 
  };
  typedef struct sTriangle {
      Lib3MF_uint32 m_Indices[3];
  } sTriangle;
  typedef struct sTriangleProperties {
      Lib3MF_uint32 m_ResourceID;
      Lib3MF_uint32 m_PropertyIDs[3];
  } sTriangleProperties;
  typedef struct sPosition {
      Lib3MF_single m_Coordinates[3];
  } sPosition;
  typedef struct sPosition2D {
      Lib3MF_single m_Coordinates[2];
  } sPosition2D;
  typedef struct sCompositeConstituent {
      Lib3MF_uint32 m_PropertyID;
      Lib3MF_double m_MixingRatio;
  } sCompositeConstituent;
  typedef struct sMultiPropertyLayer {
      Lib3MF_uint32 m_ResourceID;
      eBlendMethod m_TheBlendMethod;
  } sMultiPropertyLayer;
  typedef struct sTex2Coord {
      Lib3MF_double m_U;
      Lib3MF_double m_V;
  } sTex2Coord;
  typedef struct sTransform {
      Lib3MF_single m_Fields[4][3];
  } sTransform;
  typedef struct sBox {
      Lib3MF_single m_MinCoordinate[3];
      Lib3MF_single m_MaxCoordinate[3];
  } sBox;
  typedef struct sColor {
      Lib3MF_uint8 m_Red;
      Lib3MF_uint8 m_Green;
      Lib3MF_uint8 m_Blue;
      Lib3MF_uint8 m_Alpha;
  } sColor;
  typedef struct sBeam {
      Lib3MF_uint32 m_Indices[2];
      Lib3MF_double m_Radii[2];
      eBeamLatticeCapMode m_CapModes[2];
  } sBeam;
  typedef struct sBall {
      Lib3MF_uint32 m_Index;
      Lib3MF_double m_Radius;
  } sBall;